# openg2g

./: .gitignore  404.html  CLAUDE.md  README.md  _zensical.toml  index.html  mkdocs.yml  objects.inv  paper_plots.mplstyle  plots.py  pyproject.toml  run_all_tests.sh  zensical.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml
api/clock/: index.html
api/config/: index.html
api/controller/: index.html
api/coordinator/: index.html
api/datacenter/: index.html
api/events/: index.html
api/grid/: index.html
api/metrics/: index.html
api/models/: index.html
api/types/: index.html
data/: build_mlenergy_data.py  generate_training_trace.py  models.json  plotting.py
data/grid/ieee123/: IEEE123Bus.dss
data/grid/ieee13/: IEEE13Bus.dss  IEEE13Nodeckt.dss
data/grid/ieee34/: IEEE34Bus.dss  ieee34Mod1_halfline.dss
data/offline/: build_mlenergy_data.py  generate_training_trace.py  plotting.py
data/online/: build_requests.py  prepare_prompts.py
docs/: index.md
docs/api/: clock.md  config.md  controller.md  coordinator.md  datacenter.md  events.md  grid.md  metrics.md  models.md  types.md  utils.md
docs/assets/: extra.css
docs/examples/: 1-gpu-flexibility.md  2-voltage-regulation-strategies.md  3-controller-parameter-sensitivity.md  4-grid-topology-effects.md  5-hosting-capacity.md  6-dc-location-planning.md  7-multi-dc-coordination.md  8-pv-dc-siting.md  9-hardware-in-the-loop.md  controller-parameter-sensitivity.md  dc-location-planning.md  gpu-flexibility.md  grid-topology-effects.md  hardware-in-the-loop.md  hosting-capacity.md  multi-dc-coordination.md  pv-dc-siting.md  rl-controller.md  storage-coordination.md  voltage-regulation-strategies.md
docs/getting-started/: installation.md  quickstart.md  running.md
docs/guide/: architecture.md  building-simulators.md  composing.md  concepts.md  custom-components.md  data-pipeline.md  extending.md
docs/overrides/: main.html
examples/: plotting.py  run_baseline.py  run_ofo.py
examples/ieee13/: IEEE13Nodeckt.dss
examples/model_insights/: admissible_capacity.py  common.py  hardware.py  model_size.py  parallelism.py  plots.py  precision.py
examples/offline/: analyze_LLM_load_shifting.py  analyze_different_controllers.py  analyze_storage_coordination.py  build_scenario_library.py  config.json  config_ieee123.json  config_ieee123_load_shift.json  config_ieee13.json  config_ieee34.json  config_ieee34_pv_optimization.json  data_sources.json  evaluate_controllers.py  optimize_pv_and_dc_locations.py  optimize_pv_locations_and_capacities.py  plot_all_figures.py  plot_topology.py  plotting.py  run_baseline.py  run_ieee123_baseline.py  run_ieee123_ofo.py  run_ieee13_baseline.py  run_ieee13_ofo.py  run_ieee34_baseline.py  run_ieee34_ofo.py  run_ofo.py  sweep_dc_locations.py  sweep_hosting_capacities.py  sweep_ofo_parameters.py  systems.py  train_ppo.py  utils.py
examples/offline/data/offline/ebac1d5c03f752d2/: _manifest.json  latency_fits.csv  logistic_fits.csv  traces_summary.csv  training_trace.csv
examples/offline/outputs/ieee123/: results_ieee123_comparison.csv
examples/offline/outputs/ieee123/baseline_no-tap/: result_baseline_no-tap.csv
examples/offline/outputs/ieee123/baseline_tap-change/: result_baseline_tap-change.csv
examples/offline/outputs/ieee123/hosting_capacity_1d/: results_ieee123_hosting_capacity_WO_OFO_int1.00.csv  results_ieee123_hosting_capacity_W_OFO_int1.00.csv  summary_ieee123_hosting_capacity_WO_OFO_int1.00.csv  summary_ieee123_hosting_capacity_W_OFO_int1.00.csv
examples/offline/outputs/ieee123/ofo_no-tap/: result_ofo_no-tap.csv
examples/offline/outputs/ieee123/ofo_tap-change/: result_ofo_tap-change.csv
examples/offline/outputs/ieee123/pv_dc_coopt/: dc_assignments_ieee123.csv  milp_summary_ieee123.json  pv_placements_ieee123.csv  tap_schedule_ieee123.csv  validation_ieee123.csv
examples/offline/outputs/ieee123/pv_expansion/: milp_result_ieee123.csv  summary_ieee123.json  tap_schedule_ieee123.csv  validation_ieee123.csv
examples/offline/outputs/ieee13/: results_ieee13_comparison.csv
examples/offline/outputs/ieee34/: results_ieee34_comparison.csv
examples/online/: config.json  online_config.example.json  online_config.example.yaml  run_baseline.py  run_ofo.py
getting-started/installation/: index.html
getting-started/running/: index.html
guide/architecture/: index.html
guide/composing/: index.html
guide/concepts/: index.html
guide/custom-components/: index.html
guide/data-pipeline/: index.html
openg2g/: __init__.py  capabilities.py  clock.py  common.py  context.py  coordinator.py  events.py  types.py  utils.py
openg2g/controller/: __init__.py  base.py  batch_size_schedule.py  load_shift.py  noop.py  ofo.py  ppo.py  rule_based.py  storage.py  tap_schedule.py
openg2g/datacenter/: __init__.py  base.py  command.py  config.py  layout.py  offline.py  online.py  training_overlay.py
openg2g/datacenter/workloads/: __init__.py  inference.py  training.py
openg2g/grid/: base.py  command.py  config.py  generator.py  load.py  opendss.py  storage.py
openg2g/metrics/: performance.py  voltage.py
openg2g/models/: latency.py  logistic.py  spec.py
openg2g/plotting/: __init__.py  batch.py  latency.py  power.py  voltage.py
openg2g/rl/: __init__.py  env.py
scripts/: docs.sh  gen_api_docs.py  lint.sh  verify_post_merge_migration.sh
search/: search_index.json
tests/: test_batch_size_schedule.py  test_clock.py  test_command_target.py  test_controller_generic_contract.py  test_coordinator.py  test_grid_profiles.py  test_logistic.py  test_model_spec.py  test_offline_dc.py  test_ofo_internals.py  test_ofo_observed_latency.py  test_online_dc.py  test_storage.py  test_sweep_dc_locations.py  test_sweep_ofo_parameters.py  test_types.py  test_voltage_metrics.py
(+120 files in other folders)
