[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "openg2g"
version = "0.0.1"
description = "A GPU-to-Grid simulation library for datacenter-grid cooperation."
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "zeus",
    "mlenergy-data",
]

[tool.uv.sources]
mlenergy-data = { path = "mlenergy-data", editable = true }

[project.optional-dependencies]
grid = ["opendssdirect.py"]

[dependency-groups]
test = ["pytest>=8"]
lint = ["ruff>=0.9", "pyright>=1.1"]
docs = ["mkdocs-material", "mkdocstrings[python]"]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"},
    "opendssdirect.py",
]

[tool.setuptools.packages.find]
include = ["openg2g*"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "SIM108",  # ternary operator; prefer explicit if/else for readability
    "RUF046",  # unnecessary int() cast; defensive casting is intentional
]

[tool.ruff.lint.isort]
known-first-party = ["openg2g"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
extraPaths = ["mlenergy-data"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownParameterType = false
reportConstantRedefinition = false

[tool.pytest.ini_options]
testpaths = ["tests"]
