[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "openg2g"
version = "0.0.1"
description = "A GPU-to-Grid simulation library for datacenter-grid cooperation."
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "numpy",
    "pandas",
    "aiohttp",
    "zeus @ git+https://github.com/ml-energy/zeus.git@master",
    "mlenergy-data",
]

[project.optional-dependencies]
opendss = ["opendssdirect.py"]

[dependency-groups]
test = ["pytest"]
lint = ["ruff", "ty"]
docs = ["zensical", "mkdocstrings[python]"]
examples = ["openg2g[opendss]", "matplotlib", "datasets", "openai", "pyyaml"]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"},
    {include-group = "examples"},
]

[tool.setuptools.packages.find]
include = ["openg2g*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "SIM108",  # ternary operator; prefer explicit if/else for readability
    "RUF046",  # unnecessary int() cast; defensive casting is intentional
    "RUF001",  # ambiguous unicode; intentional Greek letters in paper cross-refs
    "RUF002",  # ambiguous unicode in docstrings; same
    "RUF003",  # ambiguous unicode in comments; same
]

[tool.ruff.lint.isort]
known-first-party = ["openg2g"]

[tool.pytest.ini_options]
testpaths = ["tests"]
